After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 612371 - text in keyboard status applet does not respect changes of theme colours
text in keyboard status applet does not respect changes of theme colours
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Indicator
2.29.x
Other Linux
: Normal normal
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
: 611875 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-03-10 01:47 UTC by Sameer Morar
Modified: 2010-04-15 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyboard applet in the system tray (7.46 KB, image/png)
2010-03-10 01:47 UTC, Sameer Morar
  Details
Patch to select panel widget style info (1.01 KB, patch)
2010-03-11 23:59 UTC, Sameer Morar
none Details | Review

Description Sameer Morar 2010-03-10 01:47:29 UTC
Created attachment 155700 [details]
keyboard applet in the system tray

Binary package hint: gnome-control-center

The text in the keyboard preferences applet, which appears in the system tray when multiple keyboard layouts are present does not follow theme guidelines.

Steps to reproduce:
1) Open keyboard preferences from the control center
2) Select layouts tab
3) Add more than one layouts
4) Observe the keyboard preferences applet in the system tray
5) Change gnome theme, and observe that the colour of the text in the keyboard preferences applet does not change.

I have attached a screenshot showing the system tray with the keyboard indicator when the Ambiance theme is selected from Lucid Lynx Alpha 3.
Comment 1 Sergey V. Udaltsov 2010-03-11 00:34:01 UTC
There is a tricky question here. I am trying to figure out if there is a way to get notified about theme change without having any gtk widget. Unfortunately the status icon is not a widget:(
Comment 2 Sergey V. Udaltsov 2010-03-11 02:07:38 UTC
Fixed in git. Could you please check?
Comment 3 Sameer Morar 2010-03-11 23:45:52 UTC
Thanks, the text style is now updated when the theme change occurs, however, it appears that the wrong style is being used.

Currently, the GTK_TYPE_LABEL from using the default widget path style is being applied, which appears to not be the same style as what is being used by other panel objects like the clock and menu.

This is apparent when comparing the colour of the text in themes such as Ambiance where this text should be light, and the label text should be dark. In themes such as Dark Room, and all of the lighter themes this bug is not apparent because the panel text is a similar colour to the label text.
Comment 4 Sameer Morar 2010-03-11 23:59:26 UTC
Created attachment 155906 [details] [review]
Patch to select panel widget style info

Herewith a patch to deal with the above-mentioned issue. I'm not sure that this is the correct approach though, but based on my testing, it works.
Comment 5 Sergey V. Udaltsov 2010-03-12 00:06:58 UTC
By any chance, do you know what style is being used by the clock applet and the menu?
Comment 6 Sergey V. Udaltsov 2010-03-12 00:07:37 UTC
Oops, sorry, I did not see your comment. Will try it now.
Comment 7 Sergey V. Udaltsov 2010-03-12 00:20:43 UTC
Done. Even though I cannot see the difference. Perhaps my version of Ambiance, from gnome-looks, is different from yours.
Comment 8 Sameer Morar 2010-03-12 01:19:25 UTC
Thanks. It's is also worth noting that the keyboard indicator is now also visible in gnome-shell, where previously it was invisible with themes where text would have been black.
Comment 9 Ori Avtalion 2010-03-26 15:53:41 UTC
Shouldn't this bug be reassigned to the libgnomekbd product?
And is there any relation to bug 611875?
Comment 10 Sergey V. Udaltsov 2010-03-26 17:49:06 UTC
*** Bug 611875 has been marked as a duplicate of this bug. ***
Comment 11 Sergey V. Udaltsov 2010-03-26 17:54:24 UTC
Yes it is actually related to libgnomekbd. There is a complex situation here, related to the fact that notification area can only accomodate square icons. See the latest discussions in desktop-devel-list
Comment 12 Sergey V. Udaltsov 2010-03-31 21:54:10 UTC
I think it is ok now. Please check in git. If it is ok - 2.30.1 will have it
Comment 13 Andrei Rohau 2010-04-05 06:14:15 UTC
So does this supposedly fix the font size and anti-aliasing issue? If it is related to our latest discussion in bug 611875, then we should try to pull it into Lucid.
Comment 14 Sergey V. Udaltsov 2010-04-15 21:03:35 UTC
Yes, that should fix it all.

But I was informed that my fix introduced funny effect with defaul lucid theme. I have to investigate it before recommending to lucid. Well, it is too late anyway - but may be 10.04.1 release would incorporate it.