Using the font name from gtk, listening to theme changes

https://bugzilla.gnome.org/show_bug.cgi?id=612371